# filedispatch

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.example.yml  logging-config.yaml  pyproject.toml  pytest.ini  run.py  setup.py
docs/: TODO.md
src/: cli.py  config.py  core.py  exchange.py  notifiers.py  processors.py  routers.py  schema.py  schemas.py  utils.py  watchers.py  workers.py
src/api/: dao.py  models.py  queries.py  server.py  views.py
tests/: base.py  conftest.py  factories.py  test_config.py  test_filedispatch.py  test_notifiers.py  test_processors.py  test_utils.py  test_watchers.py
tests/api/: test_log_api.py
tests/unit/: test_config.py  test_exchange.py  test_notifiers.py  test_processors.py  test_workers.py
tests/unit/api/: test_log_api.py
