[tool.poetry]
name = "filedispatch"
version = "0.1.0"
description = ""
authors = ["Aristide <aristide.bamazi@imsp-uac.org>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic-yaml = "^0.8.0"
pytest-mock = "^3.8.2"
# The depencicies is pinned to v0.15 because of this https://github.com/samuelcolvin/watchfiles/issues/177
watchfiles = "0.15"
aioftp = "^0.21.3"
aiohttp = "^3.8.1"
pytest-aiohttp = "^1.0.4"
aiofiles = "^0.8.0"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
PyPika = "^0.48.9"
aiosqlite = "^0.17.0"
aiohttp-pydantic = "^1.12.2"
aiohttp-retry = "^2.8.3"
mode = "^4.4.0"
nest-asyncio = "^1.5.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
flake8 = "^5.0.4"
pytest-asyncio = "^0.19.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
