# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "filedispatch"
version = "0.1.0"
description = "filedispath is a simple, configurable, async based and user-friendly cli app for automatic file organization. It listens to a configured source folder for new files and copy or move them to the appropriate destination according to the configuration file."
authors = ["Aristide <aristide.bamazi@imsp-uac.org>"]
# New attributes
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Environment :: No Input/Output (Daemon)",
    "Environment :: Web Environment",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Framework :: AsyncIO",
]
homepage="https://github.com/aristidebm/filedispatch"
repository="https://github.com/aristidebm/filedispatch"
packages = [
    {include = "src"}
]
include = ["LICENSE"]

[tool.poetry.scripts]
filedispatch = 'src.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
pydantic-yaml = "^0.8.0"
# The depencicies is pinned to v0.15 because of this https://github.com/samuelcolvin/watchfiles/issues/177
watchfiles = "0.15"
aioftp = "^0.21.3"
aiohttp = "^3.8.1"
pytest-aiohttp = "^1.0.4"
aiofiles = "^0.8.0"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
PyPika = "^0.48.9"
aiohttp-pydantic = "^1.12.2"
aiohttp-retry = "^2.8.3"
aiosqlite = "^0.17.0"
aiomonitor = "^0.4.5"
daemons = "^1.3.2"
typing-extensions = "^4.5.0"
mode-streaming = "^0.3.5"
pydantic-cli = "^4.3.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
flake8 = "^5.0.4"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.8.2"
pre-commit = "^2.20.0"
pydantic-factories = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
